@@ -65,7 +65,6 @@ import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.PBEParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 
 import org.eclipse.jgit.internal.JGitText;
 import org.eclipse.jgit.util.Base64;
@@ -319,7 +318,8 @@ abstract class WalkEncryption {
 		String DEFAULT_KEY_ALGO = JetS3tV2.ALGORITHM;
 		String DEFAULT_KEY_SIZE = Integer.toString(JetS3tV2.KEY_SIZE);
 		String DEFAULT_KEY_ITER = Integer.toString(JetS3tV2.ITERATIONS);
-		String DEFAULT_KEY_SALT = DatatypeConverter.printHexBinary(JetS3tV2.SALT);
+		//String DEFAULT_KEY_SALT = DatatypeConverter.printHexBinary(JetS3tV2.SALT);
+        String DEFAULT_KEY_SALT = android.util.Base64.encodeToString(JetS3tV2.SALT, 16);
 
 		String EMPTY = ""; //$NON-NLS-1$
 
@@ -395,8 +395,9 @@ abstract class WalkEncryption {
 
 			final byte[] salt;
 			try {
-				salt = DatatypeConverter
-						.parseHexBinary(keySalt.replaceAll(REGEX_WS, EMPTY));
+				//salt = DatatypeConverter
+				//		.parseHexBinary(keySalt.replaceAll(REGEX_WS, EMPTY));
+                salt = org.apache.commons.codec.binary.Hex.decodeHex(keySalt.replaceAll(REGEX_WS, EMPTY));
 			} catch (Exception e) {
 				throw securityError(X_KEY_SALT + EMPTY + keySalt);
 			}
